# ocean-farm-viz

./: .gitignore  1.txt  1.txt.pub  README.md  package-lock.json  package.json
client/: .gitignore  package-lock.json  package.json
client/public/: index.html
client/public/data/: fish_test.webm
client/src/: App.tsx  index.css
client/src/auth/: AuthContext.tsx  AuthLayout.tsx
client/src/components/: ControlPanel.tsx  DataPanel.tsx  MonitoringPanel.tsx  OceanBackground.tsx  PrivateRoute.tsx  ToolBar.tsx
client/src/pages/: AdminManagement.tsx  Dashboard.tsx  DataCenter.tsx  Header.tsx  Home.tsx  IntelligentCenter.tsx  Login.tsx  Profile.tsx  Register.tsx  UnderWaterSystem.tsx
client/src/styles/: homeStyles.ts  oceanTheme.ts
myenv/Scripts/: Activate.ps1  activate  activate.bat
script/: preprocess.py
server/: app.py  database.py  intelligent.py  pyproject.toml
